videomixer: Don't hold object lock while sending events

https://bugzilla.gnome.org/show_bug.cgi?id=700868